--- a/web/css/login.css
+++ b/web/css/login.css
@@ -1,11 +1,15 @@
 
 /* sign in FORM */
+
 #logreg-forms{
     width:412px;
     margin:10vh auto;
-    background-color:#f3f3f3;
+    
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+#logreg-forms{
+   background-color:#fc6f6f; 
 }
 #logreg-forms form {
     width: 100%;
